--- a/src/pages/Details/Details.css
+++ b/src/pages/Details/Details.css
@@ -1,6 +1,15 @@
+.details-cnt {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: thistle;
+}
+
 .details {
     width: 80%;
     margin: auto;
+    margin-top: 10px;
 }
 
 .detailName {
@@ -9,6 +18,7 @@
 
 .detailMain {
     display: flex;
+    margin-top: 40px;
 }
 
 .detailImage {
@@ -21,14 +31,15 @@
 }
 
 .back {
-    width: 10%;
+    width: 8%;
     border-radius: 15px;
     font-weight: 600;
     outline: none;
     border: none;
-    padding: 8px;
-    margin: 5px;
-    background-color: gray;
+    padding: 10px 5px;
+    margin: 15px;
+    background-color: rgb(138, 11, 121);
+    color: white;
 
 }
 
@@ -36,4 +47,11 @@
     cursor: pointer;
     transform: scale(1.1);
     background-color: rgb(58, 212, 58);   
+}
+
+.seasonsCrew {
+    text-align: left; 
+}
+.crewList {
+    text-align: left;
 }
