--- a/src/pages/Details/Details.css
+++ b/src/pages/Details/Details.css
@@ -1,19 +1,34 @@
 .details-cnt {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+   
     background-color: thistle;
 }
 
 .details {
     width: 80%;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.genre {
+    display: flex;
+    justify-content: center;
+    color: white;
+}
+
+.genre p{
+    border: 1px solid rgb(180, 177, 177);
+    background-color: rgb(180, 177, 177);
+    margin: 5px;
+    padding: 5px 10px;
+    border-radius: 20px;
 }
 
 .detailName {
     text-align: center;
+    width: 50%;
 }
 
 .detailMain {
@@ -22,7 +37,7 @@
 }
 
 .detailImage {
-    width: 50%;
+    width: 40%;
     margin-right: 40px;
 }
 
@@ -32,13 +47,13 @@
 
 .back {
     width: 8%;
-    border-radius: 15px;
+    border-radius: 50px;
     font-weight: 600;
     outline: none;
     border: none;
     padding: 10px 5px;
     margin: 15px;
-    background-color: rgb(138, 11, 121);
+    background-color: rgb(218, 140, 207);
     color: white;
 
 }
@@ -46,7 +61,7 @@
 .back:hover {
     cursor: pointer;
     transform: scale(1.1);
-    background-color: rgb(58, 212, 58);   
+    background-color: rgb(212, 58, 212);   
 }
 
 .seasonsCrew {
