--- a/src/components/Show/Show.css
+++ b/src/components/Show/Show.css
@@ -1,6 +1,14 @@
 .show {
    width: 30%; 
    text-align: center;
+   border: 1px solid rgb(0, 174, 255);
+   margin-bottom: 10px;
+   border-radius: 15px;
+   box-shadow: 2px 4px 4px #888888;
+}
+
+.active {
+    background-color: rgb(204, 240, 132);
 }
 
 .img-div {
@@ -26,7 +34,6 @@
 
 .img {
     width: 80%;
-    
   
 }
 
@@ -37,9 +44,11 @@
     color: white;
     padding: 5px;
     position: absolute;
-    bottom: 30px;
-    right: 30px;
+    bottom: 7%;
+    right: 12%;
     font-size: 18px;
 
 }
+
+
 
