--- a/src/components/Show/Show.css
+++ b/src/components/Show/Show.css
@@ -1,5 +1,6 @@
 .show {
    width: 30%; 
+   min-width: 200px;
    text-align: center;
    border: 1px solid rgb(0, 174, 255);
    margin-bottom: 10px;
